<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvTabStudentProfileTestCompleted"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_completed"
            android:textColor="@color/White"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tvTabStudentProfileTestNotAttempt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_not_attemp"
            android:textColor="@color/White"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/tvTabStudentProfileTestFailure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_failure"
            android:textColor="@color/White"
            android:textSize="@dimen/font_size_14" />

    </LinearLayout>

</LinearLayout>