<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/parent_toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_key" />

    <com.artproficiencyapp.common.RegularTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.artproficiencyapp.common.RegularTextview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/enter_your_email_below_to_receive_the_instructions_to_reset_your_password"
        android:textColor="#493d3b"
        android:textSize="15sp" />

    <com.artproficiencyapp.common.RregularEditext
        android:id="@+id/edtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:background="@drawable/edt_round_corner"
        android:drawableLeft="@drawable/ic_email_large"
        android:drawablePadding="@dimen/padding_12"
        android:hint="@string/enter_your_email"
        android:padding="16dp"
        android:maxLines="1"
        android:textColor="#757575"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnForgotPasswordd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_signup"
        android:padding="15dp"
        android:text="@string/submit"
        android:textColor="@color/White"
        android:textStyle="bold" />

</LinearLayout>
