<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".fragment.commanfragment.ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/top_img" />

            <com.artproficiencyapp.common.RregularEditext
                android:id="@+id/edtOldPassword"
                style="@style/changePassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:layout_marginTop="@dimen/_10sdp"
                android:imeOptions="actionNext" />

            <com.artproficiencyapp.common.RregularEditext
                android:id="@+id/edtNewPassword"
                style="@style/changePassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/New_password"
                android:imeOptions="actionNext" />

            <com.artproficiencyapp.common.RregularEditext
                android:id="@+id/edtConformPassword"
                style="@style/changePassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conform_password"
                android:imeOptions="actionNext" />


            <Button
                android:id="@+id/btnChangepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_26sdp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/btn_signup"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/update"
                android:textColor="@color/White" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>