<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <EditText
                android:id="@+id/etStuSignUpName"
                style="@style/edt_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_name"
                android:hint="@string/signup_name"
                android:inputType="textCapSentences"
                android:padding="@dimen/padding_16" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <EditText
                android:id="@+id/etStuSignUpEmail"
                style="@style/edt_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_email_large"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_16" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_h_w_56"
                android:background="@drawable/edt_round_corner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:src="@drawable/ic_call_large" />

                <Spinner
                    android:id="@+id/spStuSignupCountryCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.40"/>

                <EditText
                    android:id="@+id/etStuSignUpPhoneNum"
                    style="@style/edt_style"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edt_h_w_56"
                    android:layout_weight="0.60"
                    android:background="@null"
                    android:digits="0123456789"
                    android:layout_gravity="center"
                    android:drawablePadding="0dp"
                    android:hint="@string/signup_pho_num"
                    android:inputType="phone"
                    android:maxLength="16"
                    android:padding="@dimen/padding_16" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_h_w_56"
                android:background="@drawable/edt_round_corner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:src="@drawable/ic_chose_director_large" />

                <Spinner
                    android:id="@+id/spStuChooseDir"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_h_w_56" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <EditText
                android:id="@+id/etStuSignUpPassword"
                style="@style/edt_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password_large"
                android:drawableRight="@drawable/eye_icon_size"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_16" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <com.artproficiencyapp.common.RegularTextview
                android:id="@+id/etPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_5"
                android:text="@string/signup_pwd_msg"
                android:textColor="@color/black_alpha_50"
                android:textSize="@dimen/font_size_12" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <EditText
                android:id="@+id/etStuSignUpConfirmPassword"
                style="@style/edt_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_h_w_56"
                android:drawableLeft="@drawable/ic_password_large"
                android:drawableRight="@drawable/eye_icon_size"
                android:hint="@string/signup_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/padding_16" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_26" />

            <Button
                android:id="@+id/btnSignupStu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_signup"
                android:text="@string/signup_title"
                android:textAllCaps="true"
                android:textColor="@color/White"
                android:textSize="@dimen/font_size_18" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10" />

            <TextView
                android:id="@+id/tvStuSignUpMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup_msg"
                android:textColor="@color/black_alpha_80"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>